
    HADOOP-8562. Enhancements to support Hadoop on Windows Server and Windows
    Azure environments. (See breakdown of tasks below for subtasks and
    contributors)

    HADOOP-8469. Make NetworkTopology class pluggable.  (Junping Du via
    szetszwo)

    HADOOP-8470. Add NetworkTopologyWithNodeGroup, a 4-layer implementation
    of NetworkTopology.  (Junping Du via szetszwo)

  IMPROVEMENTS

    HADOOP-9253. Capture ulimit info in the logs at service start time.
    (Arpit Gupta via suresh)

    HADOOP-8924. Add maven plugin alternative to shell script to save
    package-info.java. (Chris Nauroth via suresh)

    HADOOP-9117. replace protoc ant plugin exec with a maven plugin. (tucu)

    HADOOP-9279. Document the need to build hadoop-maven-plugins for
    eclipse and separate project builds. (Tsuyoshi Ozawa via suresh)

    HADOOP-9334. Upgrade netty version. (Nicolas Liochon via suresh)

    HADOOP-9343. Allow additional exceptions through the RPC layer. (sseth)

    HADOOP-9318. When exiting on a signal, print the signal name first. (Colin
    Patrick McCabe via atm)

    HADOOP-9358. "Auth failed" log should include exception string (todd)

    HADOOP-9401. CodecPool: Add counters for number of (de)compressors 
    leased out. (kkambatl via tucu)

    HADOOP-9450. HADOOP_USER_CLASSPATH_FIRST is not honored; CLASSPATH
    is PREpended instead of APpended. (Chris Nauroth and harsh via harsh)

    HADOOP-9503. Remove sleep between IPC client connect timeouts.
    (Varun Sharma via szetszwo)

    HADOOP-9322. LdapGroupsMapping doesn't seem to set a timeout for
    its directory search. (harsh)

    HADOOP-9523. Provide a generic IBM java vendor flag in PlatformName.java
    to support non-Sun JREs. (Tian Hong Wang via suresh)

    HADOOP-9511. Adding support for additional input streams (FSDataInputStream
    and RandomAccessFile) in SecureIOUtils so as to help YARN-578. (Omkar Vinit
    Joshi via vinodkv)
