@@ -371,6 +371,38 @@ return|return
 name|nativeBzip2Loaded
 return|;
 block|}
+DECL|method|getLibraryName (Configuration conf)
+specifier|public
+specifier|static
+name|String
+name|getLibraryName
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+if|if
+condition|(
+name|isNativeBzip2Loaded
+argument_list|(
+name|conf
+argument_list|)
+condition|)
+block|{
+return|return
+name|Bzip2Compressor
+operator|.
+name|getLibraryName
+argument_list|()
+return|;
+block|}
+else|else
+block|{
+return|return
+name|bzip2LibraryName
+return|;
+block|}
+block|}
 comment|/**    * Return the appropriate type of the bzip2 compressor.     *     * @param conf configuration    * @return the appropriate type of the bzip2 compressor.    */
 specifier|public
 specifier|static
