@@ -1557,6 +1557,14 @@ name|long
 name|strm
 parameter_list|)
 function_decl|;
+DECL|method|getLibraryName ()
+specifier|public
+specifier|native
+specifier|static
+name|String
+name|getLibraryName
+parameter_list|()
+function_decl|;
 block|}
 end_class
 
