@@ -260,6 +260,14 @@ name|boolean
 name|buildSupportsSnappy
 parameter_list|()
 function_decl|;
+DECL|method|getLibraryName ()
+specifier|public
+specifier|static
+specifier|native
+name|String
+name|getLibraryName
+parameter_list|()
+function_decl|;
 comment|/**    * Return if native hadoop libraries, if present, can be used for this job.    * @param conf configuration    *     * @return<code>true</code> if native hadoop libraries, if present, can be     *         used for this job;<code>false</code> otherwise.    */
 DECL|method|getLoadNativeLibraries (Configuration conf)
 specifier|public
