@@ -56,7 +56,41 @@ name|io
 operator|.
 name|compress
 operator|.
+name|Lz4Codec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|compress
+operator|.
 name|SnappyCodec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|compress
+operator|.
+name|bzip2
+operator|.
+name|Bzip2Factory
 import|;
 end_import
 
@@ -141,7 +175,7 @@ literal|"  -a  use -a to check all libraries are available\n"
 operator|+
 literal|"      by default just check hadoop library is available\n"
 operator|+
-literal|"      exit with error code if check failed\n"
+literal|"      exit with error code 1 if check failed\n"
 operator|+
 literal|"  -h  print this message\n"
 decl_stmt|;
@@ -245,6 +279,13 @@ operator|=
 literal|true
 expr_stmt|;
 block|}
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
 name|boolean
 name|nativeHadoopLoaded
 init|=
@@ -269,22 +310,75 @@ name|lz4Loaded
 init|=
 name|nativeHadoopLoaded
 decl_stmt|;
+name|boolean
+name|bzip2Loaded
+init|=
+name|Bzip2Factory
+operator|.
+name|isNativeBzip2Loaded
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|String
+name|hadoopLibraryName
+init|=
+literal|""
+decl_stmt|;
+name|String
+name|zlibLibraryName
+init|=
+literal|""
+decl_stmt|;
+name|String
+name|snappyLibraryName
+init|=
+literal|""
+decl_stmt|;
+name|String
+name|lz4LibraryName
+init|=
+literal|""
+decl_stmt|;
+name|String
+name|bzip2LibraryName
+init|=
+literal|""
+decl_stmt|;
 if|if
 condition|(
 name|nativeHadoopLoaded
 condition|)
 block|{
+name|hadoopLibraryName
+operator|=
+name|NativeCodeLoader
+operator|.
+name|getLibraryName
+argument_list|()
+expr_stmt|;
 name|zlibLoaded
 operator|=
 name|ZlibFactory
 operator|.
 name|isNativeZlibLoaded
 argument_list|(
-operator|new
-name|Configuration
-argument_list|()
+name|conf
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|zlibLoaded
+condition|)
+block|{
+name|zlibLibraryName
+operator|=
+name|ZlibFactory
+operator|.
+name|getLibraryName
+argument_list|()
+expr_stmt|;
+block|}
 name|snappyLoaded
 operator|=
 name|NativeCodeLoader
@@ -297,6 +391,52 @@ operator|.
 name|isNativeCodeLoaded
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|snappyLoaded
+operator|&&
+name|NativeCodeLoader
+operator|.
+name|buildSupportsSnappy
+argument_list|()
+condition|)
+block|{
+name|snappyLibraryName
+operator|=
+name|SnappyCodec
+operator|.
+name|getLibraryName
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|lz4Loaded
+condition|)
+block|{
+name|lz4LibraryName
+operator|=
+name|Lz4Codec
+operator|.
+name|getLibraryName
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|bzip2Loaded
+condition|)
+block|{
+name|bzip2LibraryName
+operator|=
+name|Bzip2Factory
+operator|.
+name|getLibraryName
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|System
 operator|.
@@ -313,9 +453,11 @@ name|out
 operator|.
 name|printf
 argument_list|(
-literal|"hadoop: %b\n"
+literal|"hadoop: %b %s\n"
 argument_list|,
 name|nativeHadoopLoaded
+argument_list|,
+name|hadoopLibraryName
 argument_list|)
 expr_stmt|;
 name|System
@@ -324,9 +466,11 @@ name|out
 operator|.
 name|printf
 argument_list|(
-literal|"zlib:   %b\n"
+literal|"zlib:   %b %s\n"
 argument_list|,
 name|zlibLoaded
+argument_list|,
+name|zlibLibraryName
 argument_list|)
 expr_stmt|;
 name|System
@@ -335,9 +479,11 @@ name|out
 operator|.
 name|printf
 argument_list|(
-literal|"snappy: %b\n"
+literal|"snappy: %b %s\n"
 argument_list|,
 name|snappyLoaded
+argument_list|,
+name|snappyLibraryName
 argument_list|)
 expr_stmt|;
 name|System
@@ -346,9 +492,24 @@ name|out
 operator|.
 name|printf
 argument_list|(
-literal|"lz4:    %b\n"
+literal|"lz4:    %b %s\n"
 argument_list|,
 name|lz4Loaded
+argument_list|,
+name|lz4LibraryName
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|printf
+argument_list|(
+literal|"bzip2:  %b %s\n"
+argument_list|,
+name|bzip2Loaded
+argument_list|,
+name|bzip2LibraryName
 argument_list|)
 expr_stmt|;
 if|if
@@ -368,6 +529,8 @@ operator|&&
 name|snappyLoaded
 operator|&&
 name|lz4Loaded
+operator|&&
+name|bzip2Loaded
 operator|)
 operator|)
 condition|)
