@@ -74,6 +74,56 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|io
+operator|.
+name|compress
+operator|.
+name|Lz4Codec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|compress
+operator|.
+name|SnappyCodec
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|compress
+operator|.
+name|zlib
+operator|.
+name|ZlibFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|NativeCodeLoader
@@ -187,6 +237,61 @@ literal|"libhadoop.so was not loaded."
 argument_list|)
 expr_stmt|;
 block|}
+name|assertFalse
+argument_list|(
+name|NativeCodeLoader
+operator|.
+name|getLibraryName
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// library names are depended on platform and build envs
+comment|// so just check names are available
+name|assertFalse
+argument_list|(
+name|ZlibFactory
+operator|.
+name|getLibraryName
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|NativeCodeLoader
+operator|.
+name|buildSupportsSnappy
+argument_list|()
+condition|)
+block|{
+name|assertFalse
+argument_list|(
+name|SnappyCodec
+operator|.
+name|getLibraryName
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|assertFalse
+argument_list|(
+name|Lz4Codec
+operator|.
+name|getLibraryName
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|LOG
 operator|.
 name|info
